demo1-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo1
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
